--- a/RailsOfIndia/app/src/main/res/layout/layout_pnr_widget.xml
+++ b/RailsOfIndia/app/src/main/res/layout/layout_pnr_widget.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dpSize4"
-            android:text="Train Name"
+            android:text="@string/train_name"
             android:textStyle="bold"
             android:textColor="@color/lightBlack"/>
 
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dpSize4"
-            android:text="Train Number"
+            android:text="@string/train_number"
             android:textStyle="bold"
             android:textColor="@color/lightBlack"/>
 
@@ -58,7 +58,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Source"
+                android:text="@string/source"
                 android:textStyle="bold"
                 android:textColor="@color/lightBlack"/>
 
@@ -68,7 +68,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Destination"
+                android:text="@string/destination"
                 android:textStyle="bold"
                 android:textColor="@color/lightBlack"/>
 
@@ -77,7 +77,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Reserved Upto"
+                android:text="@string/reserved_upto"
                 android:textStyle="bold"
                 android:textColor="@color/lightBlack"/>
 
@@ -124,7 +124,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Booking Status"
+            android:text="@string/booking_status"
             android:layout_marginTop="16dp"
             android:textColor="@color/lightBlack"
             android:textStyle="bold"/>
