--- a/RailsOfIndia/app/src/main/res/layout/fragment_live_train_status.xml
+++ b/RailsOfIndia/app/src/main/res/layout/fragment_live_train_status.xml
@@ -35,8 +35,8 @@
 
         <ImageView
             android:id="@+id/submit"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="@dimen/dpSize64"
+            android:layout_height="@dimen/dpSize64"
             android:src="@drawable/ic_check_mark_button"
             android:layout_marginTop="@dimen/dpSize20"
             android:layout_gravity="center"
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:id="@+id/resultView"
             android:layout_height="wrap_content"
-            android:text="Results"
+            android:text="@string/train_results"
             android:background="@color/dullWhite"
             android:gravity="center"
             android:layout_marginTop="@dimen/dpSize48"
@@ -67,13 +67,13 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Current Status"/>
+                    android:text="@string/current_status"/>
 
                 <TextView
                     android:id="@+id/train_name_no"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Train Name Number"
+                    android:text="@string/train_status_name_number"
                     android:layout_marginTop="@dimen/dpSize8"/>
 
                 <TextView
@@ -90,7 +90,7 @@
                     android:id="@+id/current_station"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Current Station"
+                    android:text="@string/current_station"
                     android:layout_marginTop="@dimen/dpSize8"/>
 
             </LinearLayout>
