--- a/RailsOfIndia/app/src/main/res/layout/fragment_pnr_status.xml
+++ b/RailsOfIndia/app/src/main/res/layout/fragment_pnr_status.xml
@@ -35,8 +35,8 @@
 
             <ImageView
                 android:id="@+id/ok"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="@dimen/dpSize64"
+                android:layout_height="@dimen/dpSize64"
                 android:src="@drawable/ic_check_mark_button"
                 android:layout_marginTop="@dimen/dpSize20"
                 android:layout_gravity="center"
