--- a/RailsOfIndia/app/src/main/res/layout/layout_pnr_details_recyclerview.xml
+++ b/RailsOfIndia/app/src/main/res/layout/layout_pnr_details_recyclerview.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dpSize10"
-        android:text="Passenger Number"
+        android:text="@string/passenger_number"
         android:textStyle="bold" />
 
     <View
@@ -32,7 +32,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Sr.no"
+            android:text="@string/sr_no"
             android:textStyle="bold" />
 
         <View
@@ -45,7 +45,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Current Status"
+            android:text="@string/current_status"
             android:textStyle="bold" />
 
         <View
@@ -58,7 +58,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Booking Status"
+            android:text="@string/booking_status"
             android:textStyle="bold" />
 
         <View
