--- a/RailsOfIndia/app/src/main/res/layout/layout_train_route_recyclerview.xml
+++ b/RailsOfIndia/app/src/main/res/layout/layout_train_route_recyclerview.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dpSize8"
-            android:text="Station"/>
+            android:text="@string/station"/>
 
         <View
             android:layout_width="match_parent"
@@ -41,14 +41,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Code"/>
+                android:text="@string/code"/>
 
             <TextView
                 android:id="@+id/day"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Day"/>
+                android:text="@string/day"/>
 
         </LinearLayout>
 
@@ -69,14 +69,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Arrival"/>
+                android:text="@string/arrival"/>
 
             <TextView
                 android:id="@+id/departure"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Departure"/>
+                android:text="@string/departure"/>
 
         </LinearLayout>
 
