--- a/RailsOfIndia/app/src/main/res/layout/fragment_pnr_status.xml
+++ b/RailsOfIndia/app/src/main/res/layout/fragment_pnr_status.xml
@@ -27,6 +27,7 @@
                 android:background="@drawable/bg_edittext_border_one"
                 android:hint="@string/enter_pnr_number"
                 android:paddingLeft="@dimen/dpSize16"
+                android:paddingStart="@dimen/dpSize16"
                 android:inputType="number"
                 android:imeOptions="actionDone"
                 android:textSize="@dimen/smallText"
