--- a/RailsOfIndia/app/src/main/res/layout/fragment_seat_availability_details.xml
+++ b/RailsOfIndia/app/src/main/res/layout/fragment_seat_availability_details.xml
@@ -151,7 +151,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Availability"
+                android:text="@string/availability"
                 android:layout_marginTop="@dimen/dpSize8"/>
 
             <View
