--- a/RailsOfIndia/app/src/release/res/values/google_maps_api.xml
+++ b/RailsOfIndia/app/src/release/res/values/google_maps_api.xml
@@ -17,6 +17,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        YOUR_KEY_HERE
+        AIzaSyDQcqnISK8VRLItqD_O5zVXU5i-kBBsGPk
     </string>
 </resources>
