--- a/RailsOfIndia/app/src/main/res/layout/activity_search.xml
+++ b/RailsOfIndia/app/src/main/res/layout/activity_search.xml
@@ -43,23 +43,45 @@
                     android:orientation="vertical"
                     android:padding="@dimen/dpSize16">
 
-                    <TextView
-                        android:id="@+id/train_name"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/train_name"/>
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/train_name_text"/>
+
+                        <TextView
+                            android:id="@+id/train_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="@dimen/dpSize8">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/train_number_text"/>
+
+                        <TextView
+                            android:id="@+id/train_number"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
 
                     <TextView
-                        android:id="@+id/train_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/train_number"
-                        android:layout_marginTop="@dimen/dpSize8"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Runs On"
+                        android:text="@string/runs_on"
                         android:layout_marginTop="@dimen/dpSize8"/>
 
                     <android.support.v7.widget.RecyclerView
