--- a/RailsOfIndia/app/src/main/res/layout/fragment_live_train_status.xml
+++ b/RailsOfIndia/app/src/main/res/layout/fragment_live_train_status.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<RelativeLayout android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:padding="@dimen/dpSize16">
+    android:paddingTop="@dimen/dpSize16"
+    android:paddingLeft="@dimen/dpSize16"
+    android:paddingRight="@dimen/dpSize16"
+    android:paddingStart="@dimen/dpSize16"
+    android:paddingEnd="@dimen/dpSize16"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/linear"
@@ -50,7 +54,7 @@
             android:text="@string/train_results"
             android:background="@color/dullWhite"
             android:gravity="center"
-            android:layout_marginTop="@dimen/dpSize48"
+            android:layout_marginTop="@dimen/dpSize32"
             android:textColor="@color/lightBlack"
             android:padding="@dimen/dpSize16"/>
 
@@ -66,23 +70,11 @@
                 android:padding="@dimen/dpSize16">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/current_status"/>
-
-                <TextView
-                    android:id="@+id/train_name_no"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/train_status_name_number"
-                    android:layout_marginTop="@dimen/dpSize8"/>
-
-                <TextView
                     android:id="@+id/current_status_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dpSize8"
-                    android:text="Current Status of the Train would be shown here"
+                    android:text="@string/current_status_info"
                     android:background="@color/lightBlack"
                     android:textColor="@color/white"
                     android:padding="@dimen/dpSize16"/>
