--- a/RailsOfIndia/app/src/main/res/layout/fragment_pnr_status.xml
+++ b/RailsOfIndia/app/src/main/res/layout/fragment_pnr_status.xml
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:id="@+id/resultView"
                 android:layout_height="wrap_content"
-                android:text="Saved Pnrs"
+                android:text="@string/saved_pnrs"
                 android:background="@color/dullWhite"
                 android:gravity="center"
                 android:layout_marginTop="@dimen/dpSize20"
