--- a/RailsOfIndia/app/src/main/res/layout/fragment_seat_availability_details.xml
+++ b/RailsOfIndia/app/src/main/res/layout/fragment_seat_availability_details.xml
@@ -119,7 +119,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="---" />
+                        android:text="@string/dash" />
 
                     <View
                         android:layout_width="0.5dp"
@@ -132,7 +132,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="---" />
+                        android:text="@string/dash" />
 
                     <View
                         android:layout_width="0.5dp"
