--- a/RailsOfIndia/app/src/main/res/layout/layout_notifications_recyclerview.xml
+++ b/RailsOfIndia/app/src/main/res/layout/layout_notifications_recyclerview.xml
@@ -35,19 +35,41 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="@dimen/dpSize8">
 
-                <TextView
-                    android:id="@+id/time"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/time"/>
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/date"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/time_text"/>
+
+                    <TextView
+                        android:id="@+id/time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/date"/>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/date_text"/>
+
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
