--- a/RailsOfIndia/app/src/main/res/layout/layout_pnr_details_recyclerview.xml
+++ b/RailsOfIndia/app/src/main/res/layout/layout_pnr_details_recyclerview.xml
@@ -88,7 +88,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="---" />
+            android:text="@string/dash" />
 
         <View
             android:layout_width="0.5dp"
@@ -101,7 +101,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="---" />
+            android:text="@string/dash" />
 
         <View
             android:layout_width="0.5dp"
@@ -114,7 +114,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="---" />
+            android:text="@string/dash" />
 
         <View
             android:layout_width="0.5dp"
