--- a/RailsOfIndia/app/src/main/res/layout/layout_pnr_list.xml
+++ b/RailsOfIndia/app/src/main/res/layout/layout_pnr_list.xml
@@ -14,12 +14,23 @@
         android:padding="@dimen/dpSize16"
         android:background="@drawable/bg_edittext_border_one">
 
-        <TextView
-            android:id="@+id/train_name_no"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/train_name"
-            android:textStyle="bold"/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/train_name_text"/>
+
+            <TextView
+                android:id="@+id/train_name_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
@@ -28,12 +39,25 @@
             android:layout_marginTop="@dimen/dpSize8"
             android:layout_marginBottom="@dimen/dpSize8"/>
 
-        <TextView
-            android:id="@+id/pnr_number"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/pnr_number"
-            android:textStyle="bold"/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/pnr_number_text"/>
+
+            <TextView
+                android:id="@+id/pnr_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
