--- a/RailsOfIndia/app/src/main/res/layout/layout_trains_days_recyclerview.xml
+++ b/RailsOfIndia/app/src/main/res/layout/layout_trains_days_recyclerview.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="---" />
+            android:text="@string/dash" />
 
         <View
             android:layout_width="0.5dp"
@@ -39,7 +39,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="---" />
+            android:text="@string/dash" />
 
         <View
             android:layout_width="0.5dp"
